<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FEMEN.org</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="liken">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="tweet">Twitter</string>
    <string name="youtube">YouTube</string>
    <string name="pinterest">Pinterest</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="flattr">Donate</string>
    <string name="app_credits">
        \nFEMEN/ФЕМЕН for Androids\n\n
        Thank you for supporting FEMEN!\n
        Version 1.0.5\n
        Email: femen.ua@gmail.com\n
        Skype: femen.ua\n
        GitHub: github.com/aethyx/femen\n\n
        \u00A9 femen.org, 2014-2018\n</string>

</resources>
